--- a/templates/edit_member.html
+++ b/templates/edit_member.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 
+<div class="page-header-actions">
+    <a href="{{ url_for('members', guild_id=guild.id) }}" class="poetic-button poetic-button-secondary">&larr; Quay lại danh sách</a>
+</div>
+
 <div class="poetic-card">
     <div class="poetic-card-header edit-member-header">
         <img src="{{ user.avatar_url }}" alt="Avatar">
